refactor: Convert RabbitMQ resource operations from reactive to synchronous
- Updated RabbitMQResourceService to return direct types instead of Mono<T>
- Modified RabbitMQResourceController to work with synchronous service calls
- Rewrote all test files to remove StepVerifier and use direct assertions
- Fixed mock return types from Mono.just() to direct values
- Updated documentation to reflect synchronous API patterns
- All 642 tests now passing with BUILD SUCCESS

This conversion simplifies the codebase by removing reactive complexity
where it wasn't providing significant benefits for the use case.